--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "dev": "npm test -- --watch",
     "lint": "eslint src test",
     "prepublish": "npm run build",
-    "test": "NODE_ENV=test mocha --compilers js:babel-core/register --recursive"
+    "test": "NODE_ENV=test mocha --compilers js:babel-core/register --require babel-polyfill --recursive"
   },
   "author": "Team Wattellina <wattellina@mondora.com>",
   "license": "Apache-2.0",
@@ -27,6 +27,7 @@
     "babel-cli": "^6.3.13",
     "babel-core": "^6.3.13",
     "babel-eslint": "^5.0.0-beta4",
+    "babel-plugin-rewire": "^1.0.0-beta-2",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
     "chai": "^3.4.1",
@@ -38,12 +39,18 @@
     "sinon-chai": "^2.8.0"
   },
   "dependencies": {
+    "ajv": "^2.4.0",
     "aws-sdk": "^2.2.21",
     "bluebird": "^3.0.6",
     "body-parser": "^1.14.1",
     "bunyan": "^1.5.1",
     "bunyan-request": "^1.2.0",
+    "crypto": "0.0.3",
     "express": "^4.13.3",
-    "express-jsonschema": "^1.1.0"
+    "express-bearer-token": "^2.1.0",
+    "express-jsonschema": "^1.1.0",
+    "lodash.merge": "^3.3.2",
+    "mongodb": "^2.0.52",
+    "node-uuid": "^1.4.7"
   }
 }
