--- a/package.json
+++ b/package.json
@@ -4,16 +4,18 @@
   "description": "Iwwa platform write API",
   "main": "lib/server.js",
   "scripts": {
+    "start-kinesis": "babel-node scripts/start-kinesis.js",
     "build": "babel src --out-dir lib",
     "clean": "rimraf lib coverage",
-    "write-commit": "git rev-parse --short HEAD > COMMIT",
-    "coverage": "NODE_ENV=test NODE_PATH=src babel-node $(npm bin)/isparta cover $(npm bin)/_mocha -- --recursive",
-    "codecov": "cat coverage/lcov.info | codecov",
-    "dev": "npm test -- --watch",
+    "coverage": "NODE_ENV=test NODE_PATH=src babel-node $(npm bin)/isparta cover $(npm bin)/_mocha -- --recursive --require babel-polyfill",
+    "codecov": "codecov",
     "lint": "eslint src test",
-    "prestart": "npm run write-commit && npm run build",
-    "start": "node lib/server.js",
-    "test": "NODE_ENV=test mocha --compilers js:babel-core/register --require babel-polyfill --recursive"
+    "prestart": "npm run build",
+    "start": "NODE_PATH=src node lib/server.js",
+    "test": "NODE_ENV=test NODE_PATH=src mocha --compilers js:babel-core/register --require babel-polyfill --recursive",
+    "dev:start": "NODE_PATH=src nodemon --ignore test/ --exec node_modules/.bin/babel-node src/server.js | bunyan",
+    "dev:test": "npm test -- --watch",
+    "dev": "npm run dev:start & npm run dev:test"
   },
   "author": "Team Wattellina <wattellina@mondora.com>",
   "license": "Apache-2.0",
@@ -36,20 +38,27 @@
     "coveralls": "^2.11.4",
     "eslint": "^1.10.3",
     "isparta": "^4.0.0",
+    "kinesalite": "^1.10.2",
     "mocha": "^2.3.4",
+    "nodemon": "^1.8.1",
     "sinon": "^1.17.2",
-    "sinon-chai": "^2.8.0"
+    "sinon-chai": "^2.8.0",
+    "supertest": "^1.1.0",
+    "supertest-as-promised": "^2.0.2"
   },
   "dependencies": {
     "aws-sdk": "^2.2.21",
+    "bcryptjs": "^2.3.0",
     "bluebird": "^3.0.6",
     "body-parser": "^1.14.1",
     "bunyan": "^1.5.1",
+    "bunyan-cloudwatch": "^2.0.0",
     "bunyan-request": "^1.2.0",
+    "convexpress": "^1.2.0",
     "express": "^4.13.3",
-    "express-bearer-token": "^2.1.0",
+    "express-jwt": "^3.3.0",
+    "jsonwebtoken": "^5.4.1",
     "lk-collection-express": "^1.1.0",
-    "lodash.merge": "^3.3.2",
     "mongodb": "^2.0.52",
     "node-uuid": "^1.4.7"
   }
