--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
     "chai": "^3.4.1",
-    "coveralls": "^2.11.4",
+    "codecov": "^1.0.1",
     "eslint": "^1.10.3",
     "isparta": "^4.0.0",
     "kinesalite": "^1.10.2",
