--- a/package.json
+++ b/package.json
@@ -50,15 +50,14 @@
     "aws-sdk": "^2.2.21",
     "bcryptjs": "^2.3.0",
     "bluebird": "^3.0.6",
-    "body-parser": "^1.14.1",
     "bunyan": "^1.5.1",
     "bunyan-cloudwatch": "^2.0.0",
     "bunyan-request": "^1.2.0",
-    "convexpress": "^1.2.0",
+    "convexpress": "^1.3.3",
     "express": "^4.13.3",
-    "express-jwt": "^3.3.0",
-    "jsonwebtoken": "^5.4.1",
-    "lk-collection-express": "^1.1.0",
+    "lk-collection-convexpress": "^1.0.3",
+    "lk-dispatch": "^1.0.1",
+    "lk-users-convexpress": "^1.0.2",
     "mongodb": "^2.0.52",
     "node-uuid": "^1.4.7"
   }
