Updated EBS configuration

--- a/.ebextensions/env.config
+++ b/.ebextensions/env.config
@@ -1,7 +1,32 @@
-option_settings:
-  - option_name: HOSTNAME
-  - option_name: AWS_CLOUDWATCH_REGION
-  - option_name: MONGODB_URL
-  - option_name: KINESIS_REGION
-  - option_name: KINESIS_STREAM_NAME
-  - option_name: JWT_SECRET
+{
+  "option_settings": [
+    {
+      "option_name": "NODE_ENV",
+      "value": "development"
+    },
+    {
+      "option_name": "HOSTNAME",
+      "value": "localhost"
+    },
+    {
+      "option_name": "AWS_CLOUDWATCH_REGION",
+      "value": "us-west-1"
+    },
+    {
+      "option_name": "MONGODB_URL",
+      "value": "mongodb://localhost:27017/iwwa-write-api"
+    },
+    {
+      "option_name": "KINESIS_REGION",
+      "value": "us-west-1"
+    },
+    {
+      "option_name": "KINESIS_STREAM_NAME",
+      "value": "entrypoint"
+    },
+    {
+      "option_name": "JWT_SECRET",
+      "value": "JWT_SECRET"
+    }
+  ]
+}
