--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,8 @@ lib/
 coverage/
 .env
 kinesis-db/
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
