Support running with NODE_ENV=beanstalk

--- a/.ebextensions/env.config
+++ b/.ebextensions/env.config
@@ -2,7 +2,7 @@
   "option_settings": [
     {
       "option_name": "NODE_ENV",
-      "value": "development"
+      "value": "beanstalk"
     },
     {
       "option_name": "HOSTNAME",
