Added babel packages as dependencies

--- a/package.json
+++ b/package.json
@@ -48,7 +48,12 @@
   },
   "dependencies": {
     "aws-sdk": "^2.2.21",
+    "babel": "^6.3.13",
+    "babel-cli": "^6.3.13",
+    "babel-core": "^6.3.13",
     "babel-polyfill": "^6.7.2",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-stage-0": "^6.3.13",
     "bcryptjs": "^2.3.0",
     "bluebird": "^3.0.6",
     "bunyan": "^1.5.1",
