--- a/package.json
+++ b/package.json
@@ -27,39 +27,39 @@
     "url": "https://github.com/innowatio/iwwa-write-api/issues"
   },
   "devDependencies": {
-    "babel-core": "^6.3.13",
-    "babel-eslint": "^5.0.0-beta4",
-    "babel-plugin-rewire": "^1.0.0-beta-2",
-    "chai": "^3.4.1",
+    "babel-core": "^6.9.1",
+    "babel-eslint": "^6.0.4",
+    "babel-plugin-rewire": "^1.0.0-rc-3",
+    "chai": "^3.5.0",
     "codecov": "^1.0.1",
-    "eslint": "^1.10.3",
+    "eslint": "^2.11.1",
     "isparta": "^4.0.0",
-    "kinesalite": "^1.10.2",
-    "mocha": "^2.3.4",
-    "nodemon": "^1.8.1",
-    "sinon": "^1.17.2",
+    "kinesalite": "^1.11.4",
+    "mocha": "^2.5.3",
+    "nodemon": "^1.9.2",
+    "sinon": "^1.17.4",
     "sinon-chai": "^2.8.0",
-    "supertest": "^1.1.0",
-    "supertest-as-promised": "^2.0.2"
+    "supertest": "^1.2.0",
+    "supertest-as-promised": "^3.1.0"
   },
   "dependencies": {
-    "aws-sdk": "^2.2.21",
-    "babel-cli": "^6.3.13",
-    "babel-polyfill": "^6.7.2",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-stage-0": "^6.3.13",
+    "aws-sdk": "^2.3.16",
+    "babel-cli": "^6.9.0",
+    "babel-polyfill": "^6.9.1",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-stage-0": "^6.5.0",
     "bcryptjs": "^2.3.0",
-    "bluebird": "^3.0.6",
-    "bunyan": "^1.5.1",
+    "bluebird": "^3.4.0",
+    "bunyan": "^1.8.1",
     "bunyan-cloudwatch": "^2.0.0",
     "bunyan-request": "^1.2.0",
-    "convexpress": "^1.3.3",
-    "express": "^4.13.3",
+    "convexpress": "^1.4.2",
+    "express": "^4.13.4",
     "lk-collection-convexpress": "^1.0.3",
-    "lk-dispatch": "^1.0.1",
+    "lk-dispatch": "^1.1.0",
     "lk-users-convexpress": "^1.0.2",
-    "mongodb": "^2.0.52",
+    "mongodb": "^2.1.21",
     "node-uuid": "^1.4.7",
-    "ramda": "^0.20.0"
+    "ramda": "^0.21.0"
   }
 }
