Replaced isparta with nyc

--- a/package.json
+++ b/package.json
@@ -7,15 +7,23 @@
     "start-kinesis": "babel-node scripts/start-kinesis.js",
     "build": "babel src --out-dir lib",
     "clean": "rimraf lib coverage",
-    "coverage": "NODE_ENV=test NODE_PATH=src babel-node $(npm bin)/isparta cover $(npm bin)/_mocha -- --recursive --require babel-polyfill",
-    "codecov": "codecov",
+    "codecov": "NODE_ENV=test NODE_PATH=src nyc mocha report --reporter=text-lcov > coverage.lcov --recursive && codecov",
+    "coverage": "NODE_ENV=test NODE_PATH=src nyc mocha --recursive",
     "lint": "eslint src test",
     "prestart": "npm run build",
     "start": "NODE_PATH=lib node lib/server.js",
-    "test": "NODE_ENV=test NODE_PATH=src mocha --compilers js:babel-core/register --require babel-polyfill --recursive",
+    "test": "NODE_ENV=test NODE_PATH=src mocha --compilers js:babel-register --require babel-polyfill --recursive",
     "dev:start": "NODE_PATH=src nodemon --ignore test/ --exec node_modules/.bin/babel-node src/server.js | bunyan",
     "dev:test": "npm test -- --watch",
     "dev": "npm run dev:start & npm run dev:test"
+  },
+  "nyc": {
+    "require": [
+      "babel-register",
+      "babel-polyfill"
+    ],
+    "sourceMap": false,
+    "instrument": false
   },
   "author": "Team Wattellina <wattellina@mondora.com>",
   "license": "Apache-2.0",
@@ -29,15 +37,17 @@
   "devDependencies": {
     "babel-core": "^6.14.0",
     "babel-eslint": "^6.1.2",
+    "babel-plugin-istanbul": "^2.0.3",
     "babel-plugin-rewire": "^1.0.0-rc-7",
+    "babel-register": "^6.16.3",
     "chai": "^3.5.0",
     "chai-as-promised": "^5.3.0",
     "codecov": "^1.0.1",
     "eslint": "^3.4.0",
-    "isparta": "^4.0.0",
     "kinesalite": "^1.11.5",
     "mocha": "^3.0.2",
     "nodemon": "^1.10.2",
+    "nyc": "^8.3.1",
     "sinon": "^1.17.5",
     "sinon-chai": "^2.8.0",
     "supertest": "^2.0.0",
