--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,8 @@
 {
-    "presets": ["es2015", "stage-0"],
+    "presets": ["stage-0", "es2015"],
     "env": {
         "test": {
-            "plugins": ["rewire"]
+            "plugins": ["istanbul", "rewire"]
         }
     }
 }
