--- a/package.json
+++ b/package.json
@@ -36,45 +36,45 @@
     "url": "https://github.com/innowatio/iwwa-write-api/issues"
   },
   "devDependencies": {
-    "babel-core": "^6.14.0",
-    "babel-eslint": "^6.1.2",
-    "babel-plugin-istanbul": "^2.0.3",
-    "babel-plugin-rewire": "^1.0.0-rc-7",
-    "babel-register": "^6.16.3",
+    "babel-core": "^6.22.1",
+    "babel-eslint": "^7.1.1",
+    "babel-plugin-istanbul": "^3.1.2",
+    "babel-plugin-rewire": "^1.0.0",
+    "babel-register": "^6.22.0",
     "chai": "^3.5.0",
-    "chai-as-promised": "^5.3.0",
+    "chai-as-promised": "^6.0.0",
     "codecov": "^1.0.1",
-    "eslint": "^3.4.0",
+    "eslint": "^3.13.1",
     "kinesalite": "^1.11.5",
-    "mocha": "^3.0.2",
-    "nodemon": "^1.10.2",
-    "nyc": "^8.3.1",
-    "sinon": "^1.17.5",
+    "mocha": "^3.2.0",
+    "nodemon": "^1.11.0",
+    "nyc": "^10.1.2",
+    "sinon": "^1.17.7",
     "sinon-chai": "^2.8.0",
-    "supertest": "^2.0.0",
-    "supertest-as-promised": "^4.0.0"
+    "supertest": "^2.0.1",
+    "supertest-as-promised": "^4.0.2"
   },
   "dependencies": {
     "async-retry": "^0.2.1",
-    "aws-sdk": "^2.5.4",
-    "babel-cli": "^6.14.0",
-    "babel-polyfill": "^6.13.0",
-    "babel-preset-es2015": "^6.14.0",
-    "babel-preset-stage-0": "^6.5.0",
-    "bcryptjs": "^2.3.0",
-    "bluebird": "^3.4.5",
-    "body-parser": "^1.15.2",
-    "bunyan": "^1.8.1",
+    "aws-sdk": "^2.7.26",
+    "babel-cli": "^6.22.2",
+    "babel-polyfill": "^6.22.0",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-stage-0": "^6.22.0",
+    "bcryptjs": "^2.4.0",
+    "bluebird": "^3.4.7",
+    "body-parser": "^1.16.0",
+    "bunyan": "^1.8.5",
     "bunyan-cloudwatch": "^2.0.0",
     "bunyan-request": "^1.2.0",
-    "convexpress": "^1.4.2",
+    "convexpress": "^1.5.0",
     "cors": "^2.8.1",
     "express": "^4.14.0",
     "lk-collection-convexpress": "^1.0.3",
     "lk-dispatch": "^1.1.0",
     "lk-users-convexpress": "^1.0.2",
-    "mongodb": "^2.2.9",
+    "mongodb": "^2.2.21",
     "node-uuid": "^1.4.7",
-    "ramda": "^0.22.1"
+    "ramda": "^0.23.0"
   }
 }
